[tool.poetry]
name = "aws-sg-finder"
version = "0.1.2"
description = ""
authors = ["mil1i <mil1i@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.17.46"
pylint = "^2.7.4"
astroid = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
