[tool.poetry]
name = "aws-sg-finder"
version = "0.1.2"
description = "Find unused security groups, or groups with ports open to the public you want to identify in your AWS account"
authors = ["mil1i <mil1i@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.18.10"
pylint = "^2.9.6"
astroid = "^2.6.5"
xlsxwriter = "^1.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
